--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <description>App web con JSF 3 + Spring Boot 3</description>
     
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <joinfaces.version>5.4.0</joinfaces.version>
     </properties>
 
@@ -43,6 +43,13 @@
             <groupId>org.joinfaces</groupId>
             <artifactId>primefaces-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
         
         <dependency>
             <groupId>org.joinfaces</groupId>
@@ -71,10 +78,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.30</version> <scope>provided</scope>
         </dependency>
 
         <dependency>
