--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=IntegracionJSF
 
 #Conexion database
 spring.datasource.url=jdbc:postgresql://localhost:5432/prueba002
-spring.datasource.username=postgres
+spring.datasource.username=Bryan
 
 #spring.datasource.password=1234
-spring.datasource.password=postgreAdmin19
+spring.datasource.password=12345
 
 # Driver de PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
